# ece217_project2

install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ece217_project2_tan/include/ece217_project2_tan/ece217_project2_tan/msg/: rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h
install/ece217_project2_tan/include/ece217_project2_tan/ece217_project2_tan/srv/: manipulation_query.h
install/ece217_project2_tan/include/ece217_project2_tan/ece217_project2_tan/srv/detail/: manipulation_query__builder.hpp  manipulation_query__description.c  manipulation_query__functions.c  (+9 more)
install/ece217_project2_tan/lib/ece217_project2_tan/: joint-state-publisher  project2-client  project2-server
install/ece217_project2_tan/share/ament_index/resource_index/package_run_dependencies/: ece217_project2_tan
install/ece217_project2_tan/share/ament_index/resource_index/rosidl_interfaces/: ece217_project2_tan
install/ece217_project2_tan/share/ece217_project2_tan/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ece217_project2_tan/share/ece217_project2_tan/cmake/: ece217_project2_tanConfig.cmake  ece217_project2_tan__rosidl_typesupport_cExport-noconfig.cmake  ece217_project2_tan__rosidl_typesupport_cppExport.cmake  ece217_project2_tan__rosidl_typesupport_introspection_cExport-noconfig.cmake  ece217_project2_tan__rosidl_typesupport_introspection_cExport.cmake  ece217_project2_tan__rosidl_typesupport_introspection_cppExport-noconfig.cmake  ece217_project2_tan__rosidl_typesupport_introspection_cppExport.cmake  export_ece217_project2_tan__rosidl_generator_cExport.cmake  export_ece217_project2_tan__rosidl_generator_pyExport-noconfig.cmake  export_ece217_project2_tan__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_ece217_project2_tan__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/ece217_project2_tan/share/ece217_project2_tan/srv/: ManipulationQuery.idl  ManipulationQuery.json
log/: latest_build
src/: .launch.py.swp  launch.py
src/ece217_project2_tan/: .CMakeLists.txt.swo  .CMakeLists.txt.swp  .package.xml.swp  CMakeLists.txt
src/ece217_project2_tan/include/ece217_project2_tan/: .project2-server.h.swp  project2-server.h
src/ece217_project2_tan/src/: .anthropomorphic-arm-with-spherical-wrist.urdf.swp  .joint-state-publisher.cpp.swo  .joint-state-publisher.cpp.swp  .kinematic_control.cpp.swl  .kinematic_control.cpp.swm  .kinematic_control.cpp.swn  .kinematic_control.cpp.swo  .kinematic_control.cpp.swp  .project2-client.cpp.swp  .project2-server.cpp.swp  .robot_state_publisher.cpp.swp  anthropomorphic-arm-with-spherical-wrist.urdf  joint-state-publisher.cpp  kinematic_control.cpp  project2-client.cpp  project2-server.cpp
src/ece217_project2_tan/srv/: ManipulationQuery.srv
